QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

0.3.1a  2007-07-19  System-tray tooltip icon crash fix.

- An immediate showstopper crash upon client start was irradicated,
  which was affecting those with the system-tray icon disabled,
  as is the default (thanks to Ken Ellinwood for first reporting
  this sloppy one).


0.3.1   2007-07-18  Shallowed bug-fix release.

- The current DSP load percentage activity is now also displayed on
  the system-tray icon tooltip.

- An illusive but nasty Connections/Patchbay item tooltip crash bug
  has been hopefully fixed (Qt >= 4.3).

- Now using QSystemTrayIcon class facility if available (Qt4 >= 4.2)
  making the system-tray option available on most platforms, notably
  on Windows and Mac OS X (EXPERIMENTAL).

- Usage of QProcess class has been severely refactored, now using
  QProcess::start() instead of QProcess::startDetached(), giving
  much tighter control over the started jackd(mp) process. Downside
  is that QjackCtl lost its ability and option to leave the process
  detached upon quitting the application. Too bad.

- A new eye-candy bit has sneaked in: server mode display, that is 
  the RT indicator, now blinks when server/client is started/active.

- Combo-box setup history has been corrected on restore, which was
  discarding the very initial default (factory) contents.

- Now that Qt4 is accessible to open-source Windows appplications,
  there's some experimental stuff sneaking in for jackdmp support
  on win32 (http://www.grame.fr/~letz/jackdmp.html). 

- Connections list items were initially sorted in descending order
  by default. Fixed. Client items are now naturally sorted, again.


0.3.0   2007-07-10  Qt4 migration was complete.

- Qt4 migration was complete. Care must be taken with this new
  configuration file and location: this release starts a new one
  from scratch and won't reuse any of the previous existing ones,