@@ -109,7 +109,8 @@ Thanks a lot Fernando!
 Here are some people who helped this project in one way or another,
 and in fair and strict alphabetic order:
 
-    Alexandre Prokoudine                Kjetil Matheussen
+    Alexandre Prokoudine                Kasper Souren
+    Andreas Persson                     Kjetil Matheussen
     Austin Acton                        Ken Ellinwood
     Ben Powers                          Lawrie Abbott
     Chris Cannam                        Lee Revell
@@ -126,7 +127,6 @@ and in fair and strict alphabetic order:
     Joachim Deguara                     Taybin Rutkin
     Jussi Laako                         Wilfried Huss
     Karsten Wiese                       Wolfgang Woehl
-    Kasper Souren
 
 
 Thanks to you all.
