@@ -68,7 +68,9 @@ int main ( int argc, char **argv )
 
 	// What style do we create these forms?
 	Qt::WindowFlags wflags = Qt::Window
+#if QT_VERSION >= 0x040200
 		| Qt::CustomizeWindowHint
+#endif
 		| Qt::WindowTitleHint
 		| Qt::WindowSystemMenuHint
 		| Qt::WindowMinMaxButtonsHint;
