@@ -102,8 +102,11 @@ qjackctlAboutForm::qjackctlAboutForm (
     sText += tr("under the terms of the GNU General Public License version 2 or later.");
     sText += "</small>";
     sText += "</p>\n";
+#if QT_VERSION >= 0x040200
     m_ui.AboutTextView->setText(sText);
-
+#else
+    m_ui.AboutTextView->setHtml(sText);
+#endif
 	// UI connections...
 	QObject::connect(m_ui.AboutQtButton,
 		SIGNAL(clicked()),
